--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "leva": "^0.9.35",
     "react": "18.3",
     "react-dom": "18.3",
+    "react-router": "^6.27.0",
+    "react-router-dom": "^6.27.0",
     "three": "^0.166.1"
   }
 }
